User managment API added
